responsive fixes
- fix extra margin in footer columns
- added consistent text shadow for heroes
- fix responsive video
- fix sign up view

--- a/src/styles/landing/footer.scss
+++ b/src/styles/landing/footer.scss
@@ -16,6 +16,10 @@
     margin: 0 36px;
     right: 0;
     width: 36px;
+
+    @include media(sm) {
+      margin-bottom: 15px;
+    }
   }
 
   .link {
