--- a/src/styles/landing/hero.scss
+++ b/src/styles/landing/hero.scss
@@ -3,16 +3,8 @@
   color: $white;
   padding: 150px 0;
 
-  @include media(sm) {
-    padding-top: 210px;
-  }
-
   @include media(xs) {
-    padding: 200px 0 150px;
-  }
-
-  @include media(xxs) {
-    padding: 150px 0 120px;
+    padding: 120px 0;
   }
 
   &::after {
@@ -35,7 +27,7 @@
     }
 
     @include media(xxs) {
-      max-width: 540px;
+      max-width: 420px;
     }
   }
 
@@ -44,6 +36,7 @@
     display: table;
     margin: 0 auto;
     padding: 0 30px;
+    text-shadow: 0 0 6px rgba($black,.3);
   }
 
   .p {
