--- a/src/styles/landing/signup.scss
+++ b/src/styles/landing/signup.scss
@@ -8,17 +8,11 @@
   position: relative;
   width: 420px;
 
-  // + .hr {
-  //   margin: -15px auto 0;
-  //   position: relative;
-  //   z-index: 1;
-  // }
-
-  // ~ .footer {
-  //   background: $white;
-  //   margin-top: 0;
-  //   padding-top: 30px;
-  // }
+  @include media(xs) {
+    margin-bottom: 15px;
+    padding: 21px 30px;
+    width: 330px;
+  }
 
   .img {
     height: 85px;
